fix: sticky Shift key
fix: page overflow

fix: missing confirmation question

--- a/ui/css/main.scss
+++ b/ui/css/main.scss
@@ -1576,7 +1576,6 @@ footer {
 .custom-permission-text-input-main {
   display: flex;
   flex-direction: column;
-  margin: 0vh 6vh 6vh 6vh;
 }
 
 .text-input-field {
